# NeuralOFHE

./: .gitignore  CMakeLists.txt  NeuralOFHE.h  README.md  test.cpp
include/: Activation.h  Application.h  AveragePool.h  BatchNorm.h  Conv2D.h  HelperFunctions.h  InherOperators.h  MatrixFormatting.h  Operator.h  ReLU.h
include/NeuralOFHE/: Application.h  NeuralOFHE.h
include/NeuralOFHE/Helperfunctions/: HelperFunctions.h
include/NeuralOFHE/Operators/: Activation.h  AveragePool.h  BatchNorm.h  BootStrapping.h  Conv2D.h  Gemm.h  GeneralLinearOperator.h  InherOperators.h  Operator.h  PadOperator.h  ReLU.h  SiLU.h  Sigmoid.h  Swish.h
src/: Activation.cpp  Application.cpp  AveragePool.cpp  BatchNorm.cpp  BootStrapping.cpp  CMakeLists.txt  Conv2D.cpp  Gemm.cpp  GeneralLinearOperator.cpp  HelperFunctions.cpp  LinTools.cpp  LinTools.h  MatrixFormatting.cpp  Operator.cpp  PadOperator.cpp  ReLU.cpp  SiLU.cpp  Sigmoid.cpp  Swish.cpp
